--- a/templates/base.html
+++ b/templates/base.html
@@ -102,7 +102,18 @@
             </div>
         </header>
 
-      
+        {# Flash messages (success/error/info) #}
+        {% if messages %}
+        <div class="content-area" style="padding-bottom: 0;">
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" style="margin-bottom: 1rem;">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+
         <div class="content-area">
             {% block page_content %}{% endblock %}
         </div>
