--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
                         {% endfor %}
                         {% endif %}
 
-                        <form method="post" action="" class="login-form">
+                        <form method="post" action="{% url 'login' %}" class="login-form">
                             {% csrf_token %}
 
                             <div class="mb-3">
