--- a/templates/tareas/crear.html
+++ b/templates/tareas/crear.html
@@ -37,23 +37,10 @@
                     <i class="fa-solid fa-user"></i>
                     Asignar a Asesor
                 </label>
-                <select name="asesor_id" class="form-control">
+                <select name="asesor_email" class="form-control">
                     <option value="">Sin asignar</option>
                     {% for asesor in asesores %}
-                    <option value="{{ asesor.id }}">{{ asesor.obtener_nombre_completo }} ({{ asesor.email_asesor }})</option>
-                    {% endfor %}
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label class="form-label">
-                    <i class="fa-solid fa-folder"></i>
-                    Solicitud Migratoria
-                </label>
-                <select name="solicitud_id" class="form-control">
-                    <option value="">Sin solicitud asociada</option>
-                    {% for solicitud in solicitudes %}
-                    <option value="{{ solicitud.codigo }}">{{ solicitud.codigo }} - {{ solicitud.estado_actual }}</option>
+                    <option value="">{{ asesor.nombre_completo }}</option>
                     {% endfor %}
                 </select>
             </div>
